b-api-service/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-api-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b-api-app
      version: v1
  template:
    metadata:
      labels:
        app: b-api-app
        version: v1
    spec:
      containers:
      - name: b-api-app
        image: velantechlab/appservice:v1
        imagePullPolicy: Always
        command: ["java","-jar","/app/app-service-1.0.jar"]
        #command: ["/bin/sh"]
        #args: ["-c", "while true; do echo hello; sleep 10;done"]        
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-config-vol
          mountPath: /app/config
      volumes:
      - name: app-config-vol
        configMap: 
          name: b-app-config-v1
          items:
          - key: application.yaml
            path: application.yaml
