b-api-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: b-api-service
spec:
  selector:
    app: b-api-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
